[gd_scene load_steps=7 format=3 uid="uid://dhebhu8dlcfrq"]

[ext_resource type="Texture2D" uid="uid://cmwa5qxovadjn" path="res://assets/ui/EmptyBox2.png" id="1_3ebmr"]
[ext_resource type="Script" path="res://ui/try_again_menu.gd" id="1_knp4d"]
[ext_resource type="Theme" uid="uid://8vgy8e1pp2an" path="res://themas/default.tres" id="2_kvj6g"]
[ext_resource type="Texture2D" uid="uid://b0xlfva37g74g" path="res://assets/characters/player/Defaultview-big.png" id="3_wg26j"]
[ext_resource type="PackedScene" uid="uid://vjcsuxbospnk" path="res://ui/life_indicator.tscn" id="4_sn5ps"]
[ext_resource type="PackedScene" uid="uid://cws7uq0uul1f6" path="res://ui/play_button.tscn" id="5_4gs25"]

[node name="TryAgainMenu" type="Popup"]
process_mode = 2
transparent_bg = true
size = Vector2i(408, 500)
script = ExtResource("1_knp4d")

[node name="Background" type="TextureRect" parent="."]
offset_right = 408.0
offset_bottom = 500.0
texture = ExtResource("1_3ebmr")

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 104.0
grow_horizontal = 2
theme = ExtResource("2_kvj6g")
theme_override_font_sizes/font_size = 40
text = "Try Again"
horizontal_alignment = 1

[node name="PlayerImage" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -120.0
offset_right = 74.5
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wg26j")

[node name="LifesCounter" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = 30.0
offset_right = 49.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="LifeIndicator" parent="Background/LifesCounter" instance=ExtResource("4_sn5ps")]
layout_mode = 2

[node name="Label" type="Label" parent="Background/LifesCounter"]
layout_mode = 2
theme = ExtResource("2_kvj6g")
theme_override_font_sizes/font_size = 32
text = "X 3"

[node name="PlayButton" parent="Background" instance=ExtResource("5_4gs25")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 88.0
offset_right = 32.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="pressed" from="Background/PlayButton" to="." method="_on_play_button_pressed"]
